[package]
name = "get-failed-codes"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
wasm-logger = "0.2.0"
reqwasm = "0.5.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
web-sys = { version = "0.3.69", features = ["DataTransfer"] }
gloo = "0.11.0"
gloo-file = "0.3.0"
log = "0.4.21"

[lib]
crate-type = ["cdylib", "rlib"]
